
import { sequelize } from '../config/database.js';
import { DataTypes, UUIDV4 } from 'sequelize';

// ==========================================
// USUARIO
// ==========================================
export const Usuario = sequelize.define('usuarios', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  codigo: { type: DataTypes.STRING(20), unique: true, allowNull: false },
  nombres: { type: DataTypes.STRING(100), allowNull: false },
  apellidos: { type: DataTypes.STRING(100), allowNull: false },
  correo: { type: DataTypes.STRING(150), unique: true, allowNull: false },
  contrasena_hash: { type: DataTypes.STRING(255), allowNull: false },
  rol: { type: DataTypes.STRING(50), allowNull: false },
  facultad: DataTypes.STRING(100),
  escuela: DataTypes.STRING(100),
  activo: { type: DataTypes.BOOLEAN, defaultValue: true },
  ultimo_acceso: DataTypes.DATE,
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'usuarios', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// TIPO DOCUMENTO
// ==========================================
export const TipoDocumento = sequelize.define('tipos_documento', {
  id: { type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true },
  codigo: { type: DataTypes.STRING(20), unique: true, allowNull: false },
  nombre: { type: DataTypes.STRING(100), allowNull: false },
  descripcion: DataTypes.TEXT,
  requiere_aprobacion: { type: DataTypes.BOOLEAN, defaultValue: true },
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'tipos_documento', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// DOCUMENTO
// ==========================================
export const Documento = sequelize.define('documentos', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  codigo: { type: DataTypes.STRING(50), unique: true, allowNull: false },
  titulo: { type: DataTypes.STRING(255), allowNull: false },
  tipo_documento_id: { type: DataTypes.INTEGER, allowNull: false },
  proceso_id: DataTypes.UUID,
  version_actual: { type: DataTypes.INTEGER, defaultValue: 1 },
  estado: { type: DataTypes.STRING(20), defaultValue: 'borrador' },
  contenido: DataTypes.TEXT,
  archivo_url: DataTypes.STRING(500),
  fecha_vigencia: DataTypes.DATEONLY,
  fecha_revision: DataTypes.DATEONLY,
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'documentos', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// MACROPROCESO
// ==========================================
export const Macroproceso = sequelize.define('macroprocesos', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  codigo: { type: DataTypes.STRING(20), unique: true, allowNull: false },
  nombre: { type: DataTypes.STRING(150), allowNull: false },
  descripcion: DataTypes.TEXT,
  responsable_id: DataTypes.UUID,
  tipo: DataTypes.STRING(30),
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'macroprocesos', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// PROCESO
// ==========================================
export const Proceso = sequelize.define('procesos', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  macroproceso_id: DataTypes.UUID,
  codigo: { type: DataTypes.STRING(20), unique: true, allowNull: false },
  nombre: { type: DataTypes.STRING(150), allowNull: false },
  objetivo: DataTypes.TEXT,
  alcance: DataTypes.TEXT,
  responsable_id: DataTypes.UUID,
  estado: { type: DataTypes.STRING(20), defaultValue: 'activo' },
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'procesos', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// ACTIVIDAD PROCESO
// ==========================================
export const ActividadProceso = sequelize.define('actividades_proceso', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  proceso_id: { type: DataTypes.UUID, allowNull: false },
  codigo: { type: DataTypes.STRING(20), allowNull: false },
  nombre: { type: DataTypes.STRING(200), allowNull: false },
  descripcion: DataTypes.TEXT,
  secuencia: { type: DataTypes.INTEGER, allowNull: false },
  responsable_id: DataTypes.UUID,
  entradas: DataTypes.TEXT,
  salidas: DataTypes.TEXT,
  indicadores: DataTypes.TEXT,
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'actividades_proceso', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// ESTANDAR ACREDITACION
// ==========================================
export const EstandarAcreditacion = sequelize.define('estandares_acreditacion', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  codigo: { type: DataTypes.STRING(50), unique: true, allowNull: false },
  nombre: { type: DataTypes.STRING(200), allowNull: false },
  organizacion: DataTypes.STRING(100),
  descripcion: DataTypes.TEXT,
  vigente_desde: DataTypes.DATEONLY,
  vigente_hasta: DataTypes.DATEONLY,
  creado_por: DataTypes.UUID,
}, { tableName: 'estandares_acreditacion', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// FACTOR CRITERIO
// ==========================================
export const FactorCriterio = sequelize.define('factores_criterio', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  estandar_id: { type: DataTypes.UUID, allowNull: false },
  codigo: { type: DataTypes.STRING(20), allowNull: false },
  nombre: { type: DataTypes.STRING(255), allowNull: false },
  descripcion: DataTypes.TEXT,
  peso: DataTypes.DECIMAL(5, 2),
  creado_por: DataTypes.UUID,
}, { tableName: 'factores_criterio', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// AUTOEVALUACION
// ==========================================
export const Autoevaluacion = sequelize.define('autoevaluaciones', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  estandar_id: { type: DataTypes.UUID, allowNull: false },
  periodo: { type: DataTypes.STRING(20), allowNull: false },
  fecha_inicio: { type: DataTypes.DATEONLY, allowNull: false },
  fecha_fin: DataTypes.DATEONLY,
  estado: { type: DataTypes.STRING(20), defaultValue: 'en_proceso' },
  puntaje_total: DataTypes.DECIMAL(5, 2),
  creado_por: DataTypes.UUID,
}, { tableName: 'autoevaluaciones', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// EVALUACION CRITERIO
// ==========================================
export const EvaluacionCriterio = sequelize.define('evaluaciones_criterio', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  autoevaluacion_id: { type: DataTypes.UUID, allowNull: false },
  factor_id: { type: DataTypes.UUID, allowNull: false },
  cumplimiento: DataTypes.STRING(20),
  puntaje: DataTypes.DECIMAL(5, 2),
  evidencias: DataTypes.TEXT,
  observaciones: DataTypes.TEXT,
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'evaluaciones_criterio', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// PLAN AUDITORIA
// ==========================================
export const PlanAuditoria = sequelize.define('planes_auditoria', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  codigo: { type: DataTypes.STRING(50), unique: true, allowNull: false },
  nombre: { type: DataTypes.STRING(200), allowNull: false },
  tipo: DataTypes.STRING(30),
  alcance: DataTypes.TEXT,
  fecha_programada: { type: DataTypes.DATEONLY, allowNull: false },
  fecha_ejecucion: DataTypes.DATEONLY,
  estado: { type: DataTypes.STRING(20), defaultValue: 'planificado' },
  lider_id: DataTypes.UUID,
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'planes_auditoria', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// HALLAZGO
// ==========================================
export const Hallazgo = sequelize.define('hallazgos', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  plan_id: { type: DataTypes.UUID, allowNull: false },
  tipo: DataTypes.STRING(30),
  descripcion: { type: DataTypes.TEXT, allowNull: false },
  area_proceso_id: DataTypes.UUID,
  gravedad: DataTypes.STRING(20),
  estado: { type: DataTypes.STRING(20), defaultValue: 'abierto' },
  fecha_cierre: DataTypes.DATEONLY,
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'hallazgos', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// CAPA
// ==========================================
export const Capa = sequelize.define('capas', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  codigo: { type: DataTypes.STRING(50), unique: true, allowNull: false },
  tipo: { type: DataTypes.STRING(20), allowNull: false },
  hallazgo_id: DataTypes.UUID,
  descripcion: { type: DataTypes.TEXT, allowNull: false },
  causa_raiz: DataTypes.TEXT,
  accion_propuesta: { type: DataTypes.TEXT, allowNull: false },
  responsable_id: { type: DataTypes.UUID, allowNull: false },
  fecha_implementacion: DataTypes.DATEONLY,
  fecha_verificacion: DataTypes.DATEONLY,
  evidencia_url: DataTypes.STRING(500),
  estado: { type: DataTypes.STRING(20), defaultValue: 'registrada' },
  efectividad: DataTypes.STRING(20),
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'capas', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// RIESGO
// ==========================================
export const Riesgo = sequelize.define('riesgos', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  codigo: { type: DataTypes.STRING(50), unique: true, allowNull: false },
  nombre: { type: DataTypes.STRING(200), allowNull: false },
  descripcion: DataTypes.TEXT,
  proceso_id: DataTypes.UUID,
  categoria: DataTypes.STRING(50),
  probabilidad: { type: DataTypes.INTEGER, validate: { min: 1, max: 5 } },
  impacto: { type: DataTypes.INTEGER, validate: { min: 1, max: 5 } },
  estado: { type: DataTypes.STRING(20), defaultValue: 'activo' },
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'riesgos', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// INDICADOR
// ==========================================
export const Indicador = sequelize.define('indicadores', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  codigo: { type: DataTypes.STRING(50), unique: true, allowNull: false },
  nombre: { type: DataTypes.STRING(200), allowNull: false },
  descripcion: DataTypes.TEXT,
  proceso_id: DataTypes.UUID,
  tipo: DataTypes.STRING(30),
  formula_calculo: DataTypes.TEXT,
  unidad_medida: DataTypes.STRING(50),
  meta: DataTypes.DECIMAL(10, 2),
  frecuencia_medicion: DataTypes.STRING(20),
  estado: { type: DataTypes.STRING(20), defaultValue: 'activo' },
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'indicadores', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// MEDICION INDICADOR
// ==========================================
export const MedicionIndicador = sequelize.define('mediciones_indicador', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  indicador_id: { type: DataTypes.UUID, allowNull: false },
  periodo: { type: DataTypes.STRING(20), allowNull: false },
  valor_real: DataTypes.DECIMAL(10, 2),
  valor_esperado: DataTypes.DECIMAL(10, 2),
  cumplimiento: DataTypes.DECIMAL(5, 2),
  analisis_tendencia: DataTypes.TEXT,
  creado_por: DataTypes.UUID,
}, { tableName: 'mediciones_indicador', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// ENCUESTA
// ==========================================
export const Encuesta = sequelize.define('encuestas', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  codigo: { type: DataTypes.STRING(50), unique: true, allowNull: false },
  titulo: { type: DataTypes.STRING(255), allowNull: false },
  descripcion: DataTypes.TEXT,
  dirigido_a: DataTypes.STRING(30),
  fecha_inicio: DataTypes.DATEONLY,
  fecha_fin: DataTypes.DATEONLY,
  anonima: { type: DataTypes.BOOLEAN, defaultValue: true },
  estado: { type: DataTypes.STRING(20), defaultValue: 'borrador' },
  creado_por: DataTypes.UUID,
  modificado_por: DataTypes.UUID,
}, { tableName: 'encuestas', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// PREGUNTA ENCUESTA
// ==========================================
export const PreguntaEncuesta = sequelize.define('preguntas_encuesta', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  encuesta_id: { type: DataTypes.UUID, allowNull: false },
  texto: { type: DataTypes.TEXT, allowNull: false },
  tipo: DataTypes.STRING(30),
  orden: { type: DataTypes.INTEGER, allowNull: false },
  obligatoria: { type: DataTypes.BOOLEAN, defaultValue: true },
}, { tableName: 'preguntas_encuesta', schema: 'sgc', timestamps: true, createdAt: 'creado_en', updatedAt: 'modificado_en' });

// ==========================================
// RESPUESTA ENCUESTA
// ==========================================
export const RespuestaEncuesta = sequelize.define('respuestas_encuesta', {
  id: { type: DataTypes.UUID, primaryKey: true, defaultValue: UUIDV4 },
  encuesta_id: { type: DataTypes.UUID, allowNull: false },
  pregunta_id: { type: DataTypes.UUID, allowNull: false },
  usuario_id: DataTypes.UUID,
  valor_texto: DataTypes.TEXT,
  valor_numerico: DataTypes.DECIMAL(10, 2),
}, { tableName: 'respuestas_encuesta', schema: 'sgc', timestamps: true, createdAt: 'enviado_en', updatedAt: false });

// ==========================================
// RELACIONES
// ==========================================
Proceso.belongsTo(Macroproceso, { foreignKey: 'macroproceso_id', as: 'macroproceso' });
Proceso.belongsTo(Usuario, { as: 'responsable', foreignKey: 'responsable_id' });
Documento.belongsTo(Proceso, { foreignKey: 'proceso_id', as: 'proceso' });
Documento.belongsTo(TipoDocumento, { foreignKey: 'tipo_documento_id', as: 'tipo' });
ActividadProceso.belongsTo(Proceso, { foreignKey: 'proceso_id', as: 'proceso' });

Hallazgo.belongsTo(PlanAuditoria, { foreignKey: 'plan_id', as: 'plan' });
Hallazgo.belongsTo(Proceso, { as: 'area_proceso', foreignKey: 'area_proceso_id' });

Capa.belongsTo(Hallazgo, { foreignKey: 'hallazgo_id', as: 'hallazgo' });
Capa.belongsTo(Usuario, { as: 'responsable', foreignKey: 'responsable_id' });

Riesgo.belongsTo(Proceso, { foreignKey: 'proceso_id', as: 'proceso' });
Indicador.belongsTo(Proceso, { foreignKey: 'proceso_id', as: 'proceso' });
MedicionIndicador.belongsTo(Indicador, { foreignKey: 'indicador_id', as: 'indicador' });

Autoevaluacion.belongsTo(EstandarAcreditacion, { foreignKey: 'estandar_id', as: 'estandar' });
EvaluacionCriterio.belongsTo(Autoevaluacion, { foreignKey: 'autoevaluacion_id', as: 'autoevaluacion' });
EvaluacionCriterio.belongsTo(FactorCriterio, { foreignKey: 'factor_id', as: 'factor' });

PreguntaEncuesta.belongsTo(Encuesta, { foreignKey: 'encuesta_id', as: 'encuesta' });
RespuestaEncuesta.belongsTo(Encuesta, { foreignKey: 'encuesta_id', as: 'encuesta' });
RespuestaEncuesta.belongsTo(PreguntaEncuesta, { foreignKey: 'pregunta_id', as: 'pregunta' });